--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [
     {
@@ -201,14 +201,14 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>...</td>\n",
-       "      <td>N = 21</td>\n",
+       "      <td>N = 20</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>1979-10-21 00:00:00</td>\n",
+       "      <td>1979-03-25 00:00:00</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>ZIM22</td>\n",
+       "      <td>ZIM7</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
@@ -239,50 +239,50 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>1</td>\n",
-       "      <td>2717</td>\n",
-       "      <td>3014</td>\n",
-       "      <td>3023</td>\n",
-       "      <td>2323</td>\n",
-       "      <td>2312</td>\n",
-       "      <td>2512</td>\n",
-       "      <td>2318</td>\n",
-       "      <td>2623</td>\n",
-       "      <td>3120</td>\n",
-       "      <td>...</td>\n",
-       "      <td>2415</td>\n",
-       "      <td>2422</td>\n",
+       "      <td>2519</td>\n",
+       "      <td>2516</td>\n",
+       "      <td>3028</td>\n",
+       "      <td>2730</td>\n",
        "      <td>3010</td>\n",
+       "      <td>x</td>\n",
+       "      <td>1521</td>\n",
+       "      <td>2221</td>\n",
+       "      <td>2523</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2110</td>\n",
+       "      <td>2117</td>\n",
+       "      <td>2027</td>\n",
+       "      <td>2322</td>\n",
+       "      <td>2618</td>\n",
        "      <td>2710</td>\n",
-       "      <td>2521</td>\n",
-       "      <td>2721</td>\n",
-       "      <td>3215</td>\n",
-       "      <td>2115</td>\n",
-       "      <td>2119</td>\n",
-       "      <td>2320</td>\n",
+       "      <td>3015</td>\n",
+       "      <td>1830</td>\n",
+       "      <td>2332</td>\n",
+       "      <td>2920</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>2</td>\n",
-       "      <td>2312</td>\n",
-       "      <td>2201</td>\n",
-       "      <td>2016</td>\n",
-       "      <td>3418</td>\n",
-       "      <td>2124</td>\n",
-       "      <td>2627</td>\n",
-       "      <td>2914</td>\n",
-       "      <td>3407</td>\n",
-       "      <td>1622</td>\n",
+       "      <td>2607</td>\n",
+       "      <td>2200</td>\n",
+       "      <td>2410</td>\n",
+       "      <td>1507</td>\n",
+       "      <td>x</td>\n",
+       "      <td>x</td>\n",
+       "      <td>2009</td>\n",
+       "      <td>1813</td>\n",
+       "      <td>2516</td>\n",
        "      <td>...</td>\n",
-       "      <td>1835</td>\n",
-       "      <td>1616</td>\n",
-       "      <td>0910</td>\n",
-       "      <td>2007</td>\n",
+       "      <td>3125</td>\n",
        "      <td>1511</td>\n",
-       "      <td>2823</td>\n",
-       "      <td>2432</td>\n",
-       "      <td>1830</td>\n",
-       "      <td>1218</td>\n",
-       "      <td>0827</td>\n",
+       "      <td>3417</td>\n",
+       "      <td>2403</td>\n",
+       "      <td>3113</td>\n",
+       "      <td>2520</td>\n",
+       "      <td>1514</td>\n",
+       "      <td>2625</td>\n",
+       "      <td>1212</td>\n",
+       "      <td>1219</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -290,34 +290,28 @@
        "</div>"
       ],
       "text/plain": [
-       "        0              1     2     3     4     5     6     7     8     9   \\\n",
-       "0      NaN  Pozycja osoby   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN   \n",
-       "1  Nr O.B.              1     2     3     4     5     6     7     8     9   \n",
-       "2        1           2717  3014  3023  2323  2312  2512  2318  2623  3120   \n",
-       "3        2           2312  2201  2016  3418  2124  2627  2914  3407  1622   \n",
+       "        0              1     2     3     4     5    6     7     8     9   ...  \\\n",
+       "0      NaN  Pozycja osoby   NaN   NaN   NaN   NaN  NaN   NaN   NaN   NaN  ...   \n",
+       "1  Nr O.B.              1     2     3     4     5    6     7     8     9  ...   \n",
+       "2        1           2519  2516  3028  2730  3010    x  1521  2221  2523  ...   \n",
+       "3        2           2607  2200  2410  1507     x    x  2009  1813  2516  ...   \n",
        "\n",
-       "   ...      12    13    14                   15    16    17    18     19  \\\n",
-       "0  ...  N = 21   NaN   NaN  1979-10-21 00:00:00   NaN   NaN   NaN  ZIM22   \n",
-       "1  ...      12    13    14                   15    16    17    18     19   \n",
-       "2  ...    2415  2422  3010                 2710  2521  2721  3215   2115   \n",
-       "3  ...    1835  1616  0910                 2007  1511  2823  2432   1830   \n",
-       "\n",
-       "     20    21  \n",
-       "0   NaN   NaN  \n",
-       "1    20    21  \n",
-       "2  2119  2320  \n",
-       "3  1218  0827  \n",
+       "       12    13    14                   15    16    17    18    19    20    21  \n",
+       "0  N = 20   NaN   NaN  1979-03-25 00:00:00   NaN   NaN   NaN  ZIM7   NaN   NaN  \n",
+       "1      12    13    14                   15    16    17    18    19    20    21  \n",
+       "2    2110  2117  2027                 2322  2618  2710  3015  1830  2332  2920  \n",
+       "3    3125  1511  3417                 2403  3113  2520  1514  2625  1212  1219  \n",
        "\n",
        "[4 rows x 22 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 139,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "rand_int = int(numpy.random.rand() * 26)\n",
+    "rand_int = int(numpy.random.rand() * 26) + 1\n",
     "data_dict[rand_int].head(4)\n",
     "# An example:"
    ]
@@ -335,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -347,14 +341,13 @@
     "    def get_relations(self, raw_session_data) -> dict:\n",
     "        rels = dict()\n",
     "        col_no = len(ppl_professions)\n",
-    "        rels = {x: [] for x in range(1, col_no + 1)}\n",
-    "        for person in range(2, col_no + 1):\n",
-    "            for entry in range(1, col_no):\n",
+    "        rels = {x: [] for x in ppl_professions.keys()}\n",
+    "        for person in range(2, col_no + 2):\n",
+    "            for entry in range(1, col_no + 1):\n",
     "                string_value = str(raw_session_data.iloc[person, entry])\n",
     "                subject_no = raw_session_data.iloc[person, 0]\n",
     "                data_point = self.tuple_from_string(string_value)\n",
     "                rels[subject_no].append(data_point)\n",
-    "                \n",
     "        return rels\n",
     "    \n",
     "    def tuple_from_string(self, string) -> tuple:\n",
@@ -385,14 +378,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Session from 1980-01-10 example entry: [(35, 7), (39, 7), (41, 1), (6, 32), (29, 11), (18, 15), (9, 26), (27, 22), (20, 12), (39, 3), (40, 10), (13, 26), (18, 19), (33, 13), (19, 23), (31, 14), (23, 13), (23, 25), (12, 30), (23, 19)] for 20\n"
+      "Session from 1980-01-10 example entry: [(33, 19), (32, 24), (28, 27), (29, 13), (25, 8), (22, 12), (28, 20), (24, 27), (23, 18), (16, 18), (18, 33), (20, 24), (15, 27), (15, 8), (9, 21), (25, 37), (20, 3), (32, 8), (8, 11), (9, 31), (4, 23)] for 9\n"
      ]
     }
    ],
@@ -404,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -442,9 +435,6 @@
     "                    out_dict[no].append(None)\n",
     "        return out_dict\n",
     "    \n",
-    "    def get_particular_rel_list(self, other) -> list:\n",
-    "        pass\n",
-    "    \n",
     "    def calc_distance(self, a, b) -> float:\n",
     "        return numpy.sqrt(a ** 2 + b ** 2)\n",
     "    \n",
@@ -455,14 +445,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "No. 1 being fisherman with distances: [0.0, 2.23606797749979, 8.246211251235321, 8.06225774829855, 9.486832980505138, 7.211102550927978, 12.041594578792296, 4.123105625617661, 11.40175425099138, 2.0, 7.0, 12.206555615733702, 6.4031242374328485, 10.770329614269007, 2.8284271247461903, 2.0, 8.246211251235321, 7.810249675906654, 14.212670403551895, 10.198039027185569] for session 5\n"
+      "No. 18 being meteorologist with distances: [2.8284271247461903, 4.242640687119285, 8.246211251235321, 8.54400374531753, 6.082762530298219, None, 9.219544457292887, 1.4142135623730951, 3.0, 4.123105625617661, 7.0710678118654755, 5.830951894845301, 4.47213595499958, 5.0, 2.23606797749979, 4.242640687119285, 6.082762530298219, 0.0, 3.605551275463989, 1.0, 3.0] for session 8\n"
      ]
     }
    ],
@@ -490,36 +480,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "expected 1D vector for x",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-191-908bbbef824a>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      3\u001b[0m     \u001b[0mmean_distance_slope_for_man\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0msession\u001b[0m \u001b[1;32min\u001b[0m \u001b[0menumerate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mman\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m         \u001b[0mmean_distance_slope_for_man\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnumpy\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpolyfit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0msession\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdeg\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m<__array_function__ internals>\u001b[0m in \u001b[0;36mpolyfit\u001b[1;34m(*args, **kwargs)\u001b[0m\n",
-      "\u001b[1;32mc:\\python38\\lib\\site-packages\\numpy\\lib\\polynomial.py\u001b[0m in \u001b[0;36mpolyfit\u001b[1;34m(x, y, deg, rcond, full, w, cov)\u001b[0m\n\u001b[0;32m    597\u001b[0m         \u001b[1;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"expected deg >= 0\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    598\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mx\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mndim\u001b[0m \u001b[1;33m!=\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 599\u001b[1;33m         \u001b[1;32mraise\u001b[0m \u001b[0mTypeError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"expected 1D vector for x\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    600\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mx\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msize\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    601\u001b[0m         \u001b[1;32mraise\u001b[0m \u001b[0mTypeError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"expected non-empty vector for x\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: expected 1D vector for x"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "fisherman                 |   5.1634 |  -0.0619\n",
+      "cook                      |  18.3722 |   0.2323\n",
+      "medic                     |   4.4377 |   0.0976\n",
+      "deputy technical manager  |   6.6229 |   0.1470\n",
+      "carpenter                 |   4.6362 |   0.0078\n",
+      "driver                    |   8.1935 |  -0.2298\n",
+      "technician                |   9.3022 |  -0.0019\n",
+      "chemist                   |  12.3395 |  -0.0305\n",
+      "meteorologist             |  10.1716 |   0.2147\n",
+      "ichthyologist             |   5.7443 |   0.0561\n",
+      "magnetologist             |  10.0467 |  -0.1854\n",
+      "seismologist              |   9.1061 |   0.1680\n",
+      "biologist                 |   4.3112 |   0.0771\n",
+      "electrician               |  11.1674 |  -0.0010\n",
+      "radiotelegraphist         |  13.6522 |   0.1113\n",
+      "psychologist              |   6.3800 |   0.0630\n",
+      "electronics engineer      |   4.5907 |   0.0967\n",
+      "meteorologist             |   4.9442 |   0.0114\n",
+      "microbiologist            |   4.9219 |   0.0203\n",
+      "parasitologist            |   8.0027 |   0.3074\n",
+      "botanist                  |   9.6682 |  -0.0811\n",
+      "\n",
+      "Average change for mean distance slope is  0.04853139922964498\n",
+      "Standard deviation for mean distance slope is  0.1269267620680697\n"
      ]
     }
    ],
    "source": [
     "mean_distance_per_session_per_man = [[(sum(filter(None, distances))/(len(distances))) if len(distances) != 0 else None for distances in man.distances.values()] for man in people_data]\n",
-    "for man in mean_distance_per_session_per_man:\n",
-    "    mean_distance_slope_for_man = []\n",
-    "    for i, session in enumerate(man):\n",
-    "        mean_distance_slope_for_man.append(numpy.polyfit(i, session, deg=1))"
+    "mean_distance_slope_for_man = []\n",
+    "mean_distances_for_man = []\n",
+    "mean_values_of_mean_distance_for_man = []\n",
+    "for y in mean_distance_per_session_per_man:\n",
+    "    y = list(filter(None, y))\n",
+    "    if y:\n",
+    "        x = range(len(y))\n",
+    "        mean_distances_for_man.append(y)\n",
+    "        a, b = numpy.polyfit(x, y, deg=1)   # y = a * x + b (approximated by least squares polynomial fit)\n",
+    "        mean_distance_slope_for_man.append(a)\n",
+    "        mean_values_of_mean_distance_for_man.append(numpy.mean(y))\n",
+    "        \n",
+    "findings = zip(ppl_professions.values(), mean_values_of_mean_distance_for_man, mean_distance_slope_for_man)\n",
+    "for entry in findings:\n",
+    "    print(f\"{entry[0]:25} | {entry[1]:8.4f} | {entry[2]:8.4f}\")\n",
+    "print()\n",
+    "print(\"Average change for mean distance slope is \", numpy.mean(mean_distance_slope_for_man))\n",
+    "print(\"Standard deviation for mean distance slope is \", numpy.std(mean_distance_slope_for_man))\n",
+    "    \n",
+    "# Occupation, mean distance and distance change tendency (above zero being more distancing)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let me plot above findings:"
+    "To my surprise, it looks like people regarded themselves more distant to each other with each passing week.\n",
+    "3 people viewed others significantly more distant with time,\n",
+    "3 people viewed others significantly closer,\n",
+    "And the rest (15) were somewhat neutral.\n",
+    "\n",
+    "Let me plot changes for average distance for most extreme cases - parasitologist and driver:"
    ]
   },
   {
@@ -552,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [],
    "source": [
